fix: fallowing overflow in box

--- a/front-end/src/Components/Agendamentos.scss
+++ b/front-end/src/Components/Agendamentos.scss
@@ -20,6 +20,7 @@ section {
         max-height: 40vh;
         min-height: 12.5rem;
         text-align: left;
+        overflow: scroll;
 
         h6 {
             color: grey;
